# miniglib

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.txt
.github/workflows/: cmake-multi-platform.yml
examples/: echo.c  tree.c
include/: miniglib.h
include/miniglib/: garray.h  ghashtable.h  glist.h  gstring.h
include/tinyglib/: garray.h  gstring.h
perf_tests/: CMakeLists.txt  perf_test_ghashtable.c
src/: CMakeLists.txt  garray.c  ghashtable.c  gstring.c
test/: test_gstring_mut.c  test_gstring_new.c
tests/: CMakeLists.txt  garray_test.c  ghashtable_test.c  gstring_test.c  test_garray.c  test_ghashtable.c  test_glist.c  test_gstring.c  test_integration.c
